fix: jwt login
