# controllers/user/schema.go
@@ -1,6 +1,6 @@
 package user
 
-type FormUser struct {
+type UserForm struct {
 	Name        string `json:"name" binding:"required"`
 	Email       string `json:"email" binding:"required"`
 	PhoneNumber string `json:"phoneNumber"`
